added homepage feature

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,12 @@
 
   <body>
     <header>
-      <h1>Welcome to Tech Blog</h1>
+      <h1>D & D Character Generator</h1>
     </header>
     <nav>
       <a href="/">Home</a>
-      <a href="/post">Dashboard</a>
+      <a href="/post">Create Character</a>
+      <a href="/post">Your Character</a>
       {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
       {{else}}
