--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --primary: #3d5852;
-  --secondary: #86938f;
+  --primary: #000000;
+  --secondary: #d47f11;
   --tertiary: #5e877f;
   --quatrinary: #6c6b67;
   --light: #e3e4e3;
@@ -72,7 +72,6 @@ nav a:hover {
 .post {
   flex: 4;
   background-color: #fff;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -97,7 +96,9 @@ img {
 .painting {
   width: 50%;
   background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
 }
 
@@ -183,4 +184,9 @@ img {
 .stamp {
   font-size: 10px;
   text-align: end;
+}
+
+.background {
+  width: 100vw;
+  height: 100vh;
 }
