--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,36 +1,37 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="user-login">Username:</label>
-        <input class="form-input" type="text" id="user-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
+<img src="/asset/dragon_art.jpg" class="background" />
+<div class="login-card">
+  <h2 class="page-title">Login</h2>
+  <form class="form login-form">
+    <div class="form-group">
+      <label for="user-login">Username:</label>
+      <input class="form-input" type="text" id="user-login" />
+    </div>
+    <div class="form-group">
+      <label for="password-login">Password:</label>
+      <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Login</button>
+      <button class="btn btn-primary btn-signup" type="submit">Sign Up</button>
+    </div>
+  </form>
+</div>
+<div class="login-card signup-card hidden">
+  <h2 class="page-title">Signup</h2>
+  <form class="form signup-form">
+    <div class="form-group">
+      <label for="username-signup">Username:</label>
+      <input class="form-input" type="text" id="username-signup" />
+    </div>
+    <div class="form-group">
+      <label for="password-signup">Password:</label>
+      <input class="form-input" type="password" id="password-signup" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Sign Up</button>
+      <button class="btn btn-primary btn-login" type="submit">Login</button>
+    </div>
+  </form>
 </div>
 
 <script src="./js/login.js"></script>
