added code to character hbs

--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,18 +1,31 @@
 <!-- Character Template -->
-<div id="character-details-template">
-<<<<<<< HEAD
+<div>
+  <div id="character-info" class="strong">
+    <h2>Character Name</h2>
+    <H2>Class/Race/Alignment</H2>
+  </div>
+  <div id="character-stats">
+    <h2>Hit Points</h2>
+    <h2>Armor Class</h2>
+    <h2>Initiative</h2>
+  </div>
+  <div>
+    <img>
+  </div>
+  <div class="character-abilities">
+    <h2>Strength</h2>
+    <h2>Intelligence</h2>
+    <h2>Dexterity</h2>
+    <h2>Wisdom</h2>
+    <h2>Constitution</h2>
+    <h2>Charisma</h2>
+  </div>
+  <div id="character-details-template">
     <p><strong>ID:</strong> {{id}}</p>
     <p><strong>User ID:</strong> {{user_id}}</p>
     <p><strong>Class ID:</strong> {{class_id}}</p>
     <p><strong>Level:</strong> {{level}}</p>
     <p><strong>Hit Points:</strong> {{hit_points}}</p>
     <p><strong>Date Created:</strong> {{createdAt}}</p>
-=======
-  <p><strong>ID:</strong> {{character.id}}</p>
-  <p><strong>User ID:</strong> {{character.user_id}}</p>
-  <p><strong>Class ID:</strong> {{character.class_id}}</p>
-  <p><strong>Level:</strong> {{character.level}}</p>
-  <p><strong>Hit Points:</strong> {{character.hit_points}}</p>
-  <p><strong>Date Created:</strong> {{character.createdAt}}</p>
->>>>>>> main
+  </div>
 </div>
