--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,8 +219,8 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 100vw;
-    height: 100vh; */
+    width: 100vw;
+    height: 100vh;
     object-fit: cover;
     object-position: 70%;
   }
