updated character hbs

--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -22,8 +22,10 @@
   </div>
   <div id="character-details-template">
     <p><strong>ID:</strong> {{id}}</p>
+    <p><strong>Character Name:</strong> {{character_name}}</p>
     <p><strong>User ID:</strong> {{user_id}}</p>
     <p><strong>Class ID:</strong> {{class_id}}</p>
+    <p><strong>Race ID:</strong> {{race_id}}</p>
     <p><strong>Level:</strong> {{level}}</p>
     <p><strong>Hit Points:</strong> {{hit_points}}</p>
     <p><strong>Date Created:</strong> {{createdAt}}</p>
