changed form backend

--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -1,4 +1,4 @@
-<form id="question-form">
+<form class="question-form">
         {{!-- <h2>Multiple-Choice Questionnaire</h2>
 
         {{#each questions}}
@@ -14,4 +14,5 @@
 
         <button class= "formButton" type="submit">Submit</button>
     </form>
-    <script>src="/js/form.js"</script>
+    <p>{{dndClass.name}}</p>
+    <script src="/js/form.js"></script>
