--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,33 +1,35 @@
 <!-- Character Template -->
-<div>
-  <div id="character-info" class="strong">
-    <h2>Character Name</h2>
-    <H2>Class/Race/Alignment</H2>
+<div class="character-template">
+  <div class="strong character-info">
+    <h2 id ="character-name" class = "box-outline ">Character Name{{character_name}}</h2>
+    <H2 id ="character-crn" class = "box-outline">Class/Race/Alignment</H2>
   </div>
-  <div id="character-stats">
-    <h2>Hit Points</h2>
-    <h2>Armor Class</h2>
-    <h2>Initiative</h2>
+  <div class="character-stats">
+    <h2 class = "fb box-outline">Hit Points:</h2>
+    <h2 class = "fb box-outline">Armor Class:</h2>
+    <h2 class = "fb box-outline">Initiative:</h2>
   </div>
-  <div>
+  <div class="character-image">
+    <h2>Character Image</h2>
     <img>
   </div>
   <div class="character-abilities">
-    <h2>Strength</h2>
-    <h2>Intelligence</h2>
-    <h2>Dexterity</h2>
-    <h2>Wisdom</h2>
-    <h2>Constitution</h2>
-    <h2>Charisma</h2>
+    <h2 class = "box-outline">Strength:</h2>
+    <h2 class = "box-outline">Intelligence:</h2>
+    <h2 class = "box-outline">Dexterity:</h2>
+    <h2 class = "box-outline">Wisdom:</h2>
+    <h2 class = "box-outline">Constitution:</h2>
+    <h2 class = "box-outline">Charisma:</h2>
   </div>
-  <div id="character-details-template">
+  {{!-- <div class="character-details-template">
     <p><strong>ID:</strong> {{id}}</p>
     <p><strong>Character Name:</strong> {{character_name}}</p>
     <p><strong>User ID:</strong> {{user_id}}</p>
     <p><strong>Class ID:</strong> {{class_id}}</p>
     <p><strong>Race ID:</strong> {{race_id}}</p>
     <p><strong>Level:</strong> {{level}}</p>
+
     <p><strong>Hit Points:</strong> {{hit_points}}</p>
     <p><strong>Date Created:</strong> {{createdAt}}</p>
-  </div>
+  </div> --}}
 </div>
