added code to render stats onto character handlebar

--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -5,5 +5,9 @@
   <p><strong>Class ID:</strong> {{character.class_id}}</p>
   <p><strong>Level:</strong> {{character.level}}</p>
   <p><strong>Hit Points:</strong> {{character.hit_points}}</p>
-  <p><strong>Date Created:</strong> {{character.createdAt}}</p>
+  <p><strong>Class Name:</strong> {{character.class.name}}</p>
+  <p><strong>Class Description:</strong> {{character.class.description}}</p>
+  <p><strong>Strength:</strong> {{character.class.strength}}</p>
+  <p><strong>Race:</strong> {{character.race.name}}</p>
+
 </div>
