--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,5 +1,5 @@
 <!-- Character Template -->
-<div class="character-template">
+{{!-- <div class="character-template">
   <div class="strong character-info">
     <h2 id ="character-name" class = "box-outline ">Character Name{{character_name}}</h2>
     <H2 id ="character-crn" class = "box-outline">Class/Race/Alignment</H2>
@@ -20,8 +20,8 @@
     <h2 class = "box-outline">Wisdom:</h2>
     <h2 class = "box-outline">Constitution:</h2>
     <h2 class = "box-outline">Charisma:</h2>
-  </div>
-{{!-- <div id="character-details-template">
+  </div> --}}
+<div id="character-details-template">
   <p><strong>ID:</strong> {{character.id}}</p>
   <p><strong>User ID:</strong> {{character.user_id}}</p>
   <p><strong>Class ID:</strong> {{character.class_id}}</p>
@@ -31,4 +31,4 @@
   <p><strong>Class Description:</strong> {{character.class.description}}</p>
   <p><strong>Strength:</strong> {{character.class.strength}}</p>
   <p><strong>Race:</strong> {{character.race.name}}</p>
-</div> --}}
+</div>
