fixed script source in createcharacter hbs

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
     </header>
     <nav>
       <a href="/">Home</a>
-      <a href="/post">Create Character</a>
+      <a href="/api/character/create">Create Character</a>
       <a href="/post">Your Character</a>
       {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
