--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@ nav {
 }
 
 nav a {
-  color: var(--light);
+  color: var(--primary);
   padding: 14px 20px;
   text-decoration: none;
   text-align: center;
