--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,27 +1,25 @@
 <!-- Character Template -->
-{{!-- <div class="character-template">
+<div class="character-template">
   <div class="strong character-info">
-    <h2 id ="character-name" class = "box-outline ">Character Name{{character_name}}</h2>
-    <H2 id ="character-crn" class = "box-outline">Class/Race/Alignment</H2>
+    <h2 id ="character-name" class = "box-outline ">{{character.character_name}}</h2>
+    <H2 id ="character-class-race" class = "box-outline">Class: {{character.class.name}} Race: {{character.race.name}}</H2>
   </div>
   <div class="character-stats">
-    <h2 class = "fb box-outline">Hit Points:</h2>
-    <h2 class = "fb box-outline">Armor Class:</h2>
-    <h2 class = "fb box-outline">Initiative:</h2>
+    <h2 class = "fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
   </div>
   <div class="character-image">
-    <h2>Character Image</h2>
+    <h3>Character Image</h3>
     <img>
   </div>
   <div class="character-abilities">
-    <h2 class = "box-outline">Strength:</h2>
-    <h2 class = "box-outline">Intelligence:</h2>
-    <h2 class = "box-outline">Dexterity:</h2>
-    <h2 class = "box-outline">Wisdom:</h2>
-    <h2 class = "box-outline">Constitution:</h2>
-    <h2 class = "box-outline">Charisma:</h2>
-  </div> --}}
-<div id="character-details-template">
+    <h2 class = "box-outline">Strength: {{character.class.strength}}</h2>
+    <h2 class = "box-outline">Intelligence: {{character.class.intelligence}}</h2>
+    <h2 class = "box-outline">Dexterity: {{character.class.dexterity}}</h2>
+    <h2 class = "box-outline">Wisdom: {{character.class.wisdom}}</h2>
+    <h2 class = "box-outline">Constitution: {{character.class.constitution}}</h2>
+    <h2 class = "box-outline">Charisma: {{character.class.charisma}}</h2>
+  </div>
+{{!-- <div id="character-details-template">
   <p><strong>ID:</strong> {{character.id}}</p>
   <p><strong>User ID:</strong> {{character.user_id}}</p>
   <p><strong>Class ID:</strong> {{character.class_id}}</p>
@@ -31,4 +29,4 @@
   <p><strong>Class Description:</strong> {{character.class.description}}</p>
   <p><strong>Strength:</strong> {{character.class.strength}}</p>
   <p><strong>Race:</strong> {{character.race.name}}</p>
-</div>
+</div> --}}
