--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -87,4 +87,4 @@
         event.preventDefault();
     });
 </div>
-<script src="./js/form.js"></script>
+<script src="./js/form.js" type="text/javascript"></script>
