--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -6,11 +6,12 @@
   </div>
   <div class="character-stats">
     <h2 class = "fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
+    <h3>Character Image</h3>
   </div>
-  <div class="character-image">
+  {{!-- <div class="character-image">
     <h3>Character Image</h3>
     <img>
-  </div>
+  </div> --}}
   <div class="character-abilities">
     <h2 class = "box-outline">Strength: {{character.class.strength}}</h2>
     <h2 class = "box-outline">Intelligence: {{character.class.intelligence}}</h2>
