added front end javascript

--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -8,10 +8,6 @@
     <h2 class = "fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
     <h3>Character Image</h3>
   </div>
-  {{!-- <div class="character-image">
-    <h3>Character Image</h3>
-    <img>
-  </div> --}}
   <div class="character-abilities">
     <h2 class = "box-outline">Strength: {{character.class.strength}}</h2>
     <h2 class = "box-outline">Intelligence: {{character.class.intelligence}}</h2>
@@ -20,6 +16,7 @@
     <h2 class = "box-outline">Constitution: {{character.class.constitution}}</h2>
     <h2 class = "box-outline">Charisma: {{character.class.charisma}}</h2>
   </div>
+  <script>src="/js/character.js"</script>
 {{!-- <div id="character-details-template">
   <p><strong>ID:</strong> {{character.id}}</p>
   <p><strong>User ID:</strong> {{character.user_id}}</p>
