worked on form frontend

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,5 +1,3 @@
-
-
 <div id="form-container">
     <form id="question-form">
         <h2>Multiple-Choice Questionnaire</h2>
@@ -34,45 +32,104 @@
         </div>
         {{/each}}
 
-        <button class= "formButton" type="submit">Submit</button>
+        <button class="formButton" type="submit">Submit</button>
     </form>
 </div>
 
-<div>
-    // Sample data for questions
+<script>
     var data = {
         questions: [
             {
                 questionId: 1,
                 questionText: "What's your preferred role in a group?",
-                choices: ["Lead the charge and smash things", "Charm and inspire others", "Heal and support your allies", "Connect with nature and transform", "Swear an oath to protect the innocent", "Unleash powerful magic with your will", "Make a pact with a mysterious entity", "Study and manipulate arcane knowledge"]
+                choices:
+                    [
+                        "Lead the charge and smash things",
+                        "Charm and inspire others",
+                        "Heal and support your allies",
+                        "Connect with nature and transform",
+                        "Swear an oath to protect the innocent",
+                        "Unleash powerful magic with your will",
+                        "Make a pact with a mysterious entity",
+                        "Study and manipulate arcane knowledge"
+                    ]
             },
             {
                 questionId: 2,
-                questionText: "Question 2: What is your favorite animal?",
-                choices: ["Dog", "Cat", "Lion", "Elephant", "Dolphin", "Hawk", "Snake", "Tiger", "Horse"]
+                questionText: "What's your preferred weapon?",
+                choices:
+                    [
+                        "A massive, two-handed axe",
+                        "A musical instrument",
+                        "A mace or holy symbol",
+                        "A staff or a sling",
+                        "A sword and shield",
+                        "Magic spells",
+                        "Eldritch blasts",
+                        "A spellbook and wand"
+                    ]
             },
             {
                 questionId: 3,
-                questionText: "Question 3: What is your favorite food?",
-                choices: ["Pizza", "Burger", "Sushi", "Pasta", "Steak", "Tacos", "Salad", "Ice Cream", "Curry"]
+                questionText: "What's your favorite environment?",
+                choices:
+                    [
+                        "The wilderness",
+                        "A lively tavern",
+                        "A sacred temple",
+                        "Dense forests",
+                        "Defending the city walls",
+                        "Mysterious arcane libraries",
+                        "The shadowy places",
+                        "A tower filled with magical tomes"
+                    ]
             },
             {
                 questionId: 4,
-                questionText: "Question 4: What is your favorite movie genre?",
-                choices: ["Action", "Comedy", "Drama", "Horror", "Science Fiction", "Fantasy", "Romance", "Adventure", "Animation"]
+                questionText: "What motivates you?",
+                choices:
+                    [
+                        "Fierce loyalty to your tribe",
+                        "Fame and admiration",
+                        "Faith and devotion to a deity",
+                        "Protecting nature",
+                        "Upholding justice and righteousness",
+                        "Seeking knowledge and power",
+                        "Making pacts for power",
+                        "Unraveling magical mysteries"
+                    ]
             },
             {
                 questionId: 5,
-                questionText: "Question 5: What is your favorite season?",
-                choices: ["Spring", "Summer", "Fall", "Winter", "I don't have a favorite season"]
+                questionText: "Your preferred fighting style is...",
+                choices:
+                    [
+                        "Reckless and aggressive",
+                        "Supportive and inspiring",
+                        "Defensive and healing",
+                        "Versatile and adaptable",
+                        "Defensive and honorable",
+                        "Relying on powerful spells",
+                        "Magical curses",
+                        "Strategic and spellcasting"
+                    ]
             },
             {
                 questionId: 6,
-                questionText: "Question 6: What is your favorite hobby?",
-                choices: ["Reading", "Gaming", "Cooking", "Hiking", "Painting", "Music", "Photography", "Sports", "Other"]
-            }
-        ]
+                questionText: "How do you feel about rules and authority?",
+                choices:
+                    [
+                        "Ignore them when they get in the way",
+                        "Bend them to your advantage",
+                        "Follow them devoutly",
+                        "Nature's laws are your guide",
+                        "Uphold justice and protect the innocent",
+                        "Create your own rules with magic",
+                        "Make deals with powerful entities",
+                        "Seek hidden knowledge beyond rules"
+                    ]
+            },
+            
     };
 
     // Compile the Handlebars template
@@ -86,5 +143,8 @@
     $("#question-form").on("submit", function (event) {
         event.preventDefault();
     });
-</div>
-<script>src="/js/form.js"</script>
+
+
+</script>
+
+<script src= "/js/form.js"></script>
