--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,7 +230,6 @@ justify-content: space-evenly;
 .box-outline {
   border-radius: 10px;
   padding: 10px;
-  background-color: #6c6b67;
   height: 50px;
   background: rgb(229,142,6);
   background: linear-gradient(90deg, rgba(229,142,6,1) 8%, rgba(0,0,0,1) 95%);
@@ -248,6 +247,9 @@ justify-content: space-evenly;
   margin-top:300px;
   justify-content: space-evenly;
   gap:100px 400px;
+}
+.update-btn{
+  color:white;
 }
 
 @media screen and (max-width: 1170px) {
