--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -16,7 +16,12 @@
     <h2 class = "box-outline">Constitution: {{character.class.constitution}}</h2>
     <h2 class = "box-outline">Charisma: {{character.class.charisma}}</h2>
   </div>
-  <script>src="/js/character.js"</script>
+  <div>
+      <button class="btn login-font box-outline update-btn" type="submit">Update Character</button>
+  </div>
+</div>
+  <script src="./js/character.js"></script>
+
 {{!-- <div id="character-details-template">
   <p><strong>ID:</strong> {{character.id}}</p>
   <p><strong>User ID:</strong> {{character.user_id}}</p>
