--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -15,12 +15,10 @@
     <h2 class = "box-outline">Wisdom: {{character.class.wisdom}}</h2>
     <h2 class = "box-outline">Constitution: {{character.class.constitution}}</h2>
     <h2 class = "box-outline">Charisma: {{character.class.charisma}}</h2>
-  </div>
-  <div>
-      <button class="btn login-font box-outline update-btn" type="submit">Update Character</button>
+    <button class="login-font box-outline update-btn" type="submit">Update Character</button>
   </div>
 </div>
-  <script src="./js/character.js"></script>
+  <script src="/js/character.js"></script>
 
 {{!-- <div id="character-details-template">
   <p><strong>ID:</strong> {{character.id}}</p>
