--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,10 +79,10 @@ nav a:hover {
 .post {
   /* flex: 4; */
   background-color: #fff;
-  width: 100%;
-  /* display: flex;
+  /* width: 100%; */
+  display: flex;
   flex-direction: column;
-  align-items: center; */
+  align-items: center;
 }
 
 .btn-no-style {
@@ -211,18 +211,18 @@ img {
 .strong {
   font-weight: bold;
 }
-.character-template{
+.character-template {
   margin-top: 2em;
 }
-.character-template h2{
-  color:white;
-  font-family: "Griffy"
+.character-template h2 {
+  color: white;
+  font-family: "Griffy";
 }
 .character-info {
-display: flex;
-justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
-.character-image{
+.character-image {
   float: right;
   width: 49%;
   text-align: center;
@@ -231,8 +231,12 @@ justify-content: space-evenly;
   border-radius: 10px;
   padding: 10px;
   height: 50px;
-  background: rgb(229,142,6);
-  background: linear-gradient(90deg, rgba(229,142,6,1) 8%, rgba(0,0,0,1) 95%);
+  background: rgb(229, 142, 6);
+  background: linear-gradient(
+    90deg,
+    rgba(229, 142, 6, 1) 8%,
+    rgba(0, 0, 0, 1) 95%
+  );
 }
 .character-stats {
   display: flex;
@@ -244,18 +248,18 @@ justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: flex-end;
   width: 98%;
-  margin-top:300px;
+  margin-top: 300px;
   justify-content: center;
-  gap:100px 600px;
+  gap: 100px 600px;
 }
-.update-btn{
-  color:white;
+.update-btn {
+  color: white;
   cursor: pointer;
   font-size: 100%;
   transition: color 0.1s;
   border: none;
 }
-.update-btn:hover{
+.update-btn:hover {
   color: var(--secondary);
   background-color: var(--dark);
 }
