added image to the character page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,9 +77,8 @@ nav a:hover {
 }
 
 .post {
-  /* flex: 4; */
+  flex: 4;
   background-color: #fff;
-  /* width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
