--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -12,7 +12,7 @@
   </div>
   <div class="character-stats">
     <h2 class="fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
-    <h3><img src="{{character.class.image}}" />Character Image</h3>
+    <h3><img src="{{character.class.image}}" /></h3>
   </div>
   <div class="character-abilities">
     <h2 class="box-outline">Strength: {{character.class.strength}}</h2>
