--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,8 @@
 :root {
   --primary: #000000;
   --secondary: #d47f11;
+  --primary: #000000;
+  --secondary: #d47f11;
   --tertiary: #5e877f;
   --quatrinary: #6c6b67;
   --light: #e3e4e3;
@@ -196,171 +198,4 @@ img {
 .stamp {
   font-size: 10px;
   text-align: end;
-}
-
-.background {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-
-.login-font {
-  font-family: "Eater";
-}
-
-.strong {
-  font-weight: bold;
-}
-
-.character-template {
-  background-color: #000000;
-  background-image: url('../asset/background-image.png');
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.character-template h2 {
-  color: var(--light);
-  font-family: "Griffy";
-  /* background-image: url('../asset/bb1.png'); */
-  font-size: 2em;
-}
-
-.character-template h2:hover {
-  color: var(--secondary);
-  background-color: var(--light);
-}
-
-.character-info {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.character-image {
-  float: right;
-  width: 49%;
-  text-align: center;
-}
-
-.box-outline {
-  border-radius: 10px;
-  padding: 10px;
-  height: 50px;
-
-}
-
-.character-stats {
-  display: flex;
-  margin-top: 15px;
-  justify-content: space-around;
-}
-
-.character-abilities {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 35%;
-  justify-content: flex-end;
-  gap: 80px 250px;
-  margin-top: -500px;
-  margin-left: 1000px;
-
-}
-
-.update-btn {
-  color: white;
-  cursor: pointer;
-  font-size: 100%;
-  transition: color 0.1s;
-  border: none;
-  background-image: url('../asset/fire.png');
-}
-
-.update-btn:hover {
-  color: var(--primary);
-  background-color: var(--dark);
-}
-
-#question-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 400px;
-  margin: 0 auto;
-}
-
-#question {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #333;
-  border: 2px solid #444;
-  border-radius: 5px;
-  width: 400px;
-  color: white;
-  padding: 20px;
-  margin: 20px 0;
-}
-
-#answer-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-button {
-  background-color: #d4af37;
-  color: #1c1c1c;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #ffd700;
-}
-
-#startquiz {
-  background-color: #008000;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin-top: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-#startquiz:hover {
-  background-color: #00ff00;
-}
-
-@media screen and (max-width: 1170px) {
-  h1 {
-    font-size: 30px;
-    text-align: center;
-    font-family: "Griffy";
-    /* font-weight: bold; */
-  }
-
-  .background {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    object-position: 70%;
-  }
-
-  .btn-no-style {
-    padding: 20px 14px;
-  }
 }
