--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,14 +1,12 @@
 <!-- Character Template -->
 <div class="character-template">
-
   <div class="strong character-info">
     <h2
       id="character-name"
       class="box-outline"
     >{{character.character_name}}</h2>
-    <H2 id="character-class" class="box-outline">Class:
-      {{character.class.name}}</H2>
-    <h2 id="character-race" class="box-outline">
+    <H2 id="character-class-race" class="box-outline">Class:
+      {{character.class.name}}
       Race:
       {{character.race.name}}</H2>
   </div>
@@ -27,16 +25,3 @@
       Character</button>
   </div>
 </div>
-<script src="/js/character.js"></script>
-
-{{!-- <div id="character-details-template">
-  <p><strong>ID:</strong> {{character.id}}</p>
-  <p><strong>User ID:</strong> {{character.user_id}}</p>
-  <p><strong>Class ID:</strong> {{character.class_id}}</p>
-  <p><strong>Level:</strong> {{character.level}}</p>
-  <p><strong>Hit Points:</strong> {{character.hit_points}}</p>
-  <p><strong>Class Name:</strong> {{character.class.name}}</p>
-  <p><strong>Class Description:</strong> {{character.class.description}}</p>
-  <p><strong>Strength:</strong> {{character.class.strength}}</p>
-  <p><strong>Race:</strong> {{character.race.name}}</p>
-</div> --}}
