--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,9 +1,40 @@
 <!-- Character Template -->
-<div id="character-details-template">
-    <p><strong>ID:</strong> {{id}}</p>
-    <p><strong>User ID:</strong> {{user_id}}</p>
-    <p><strong>Class ID:</strong> {{class_id}}</p>
-    <p><strong>Level:</strong> {{level}}</p>
-    <p><strong>Hit Points:</strong> {{hit_points}}</p>
-    <p><strong>Date Created:</strong> {{createdAt}}</p>
+<div class="character-template">
+  <div class="strong character-info">
+    <h2
+      id="character-name"
+      class="box-outline"
+    >{{character.character_name}}</h2>
+    <H2 id="character-class-race" class="box-outline">Class:
+      {{character.class.name}}
+      Race:
+      {{character.race.name}}</H2>
+  </div>
+  <div class="character-stats">
+    <h2 class="fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
+    <h3><img src="{{character.class.image}}" /></h3>
+  </div>
+  <div class="character-abilities">
+    <h2 class="box-outline">Strength: {{character.class.strength}}</h2>
+    <h2 class="box-outline">Intelligence: {{character.class.intelligence}}</h2>
+    <h2 class="box-outline">Dexterity: {{character.class.dexterity}}</h2>
+    <h2 class="box-outline">Wisdom: {{character.class.wisdom}}</h2>
+    <h2 class="box-outline">Constitution: {{character.class.constitution}}</h2>
+    <h2 class="box-outline">Charisma: {{character.class.charisma}}</h2>
+    <button class="login-font box-outline update-btn" type="submit">Update
+      Character</button>
+  </div>
 </div>
+<script src="/js/character.js"></script>
+
+{{!-- <div id="character-details-template">
+  <p><strong>ID:</strong> {{character.id}}</p>
+  <p><strong>User ID:</strong> {{character.user_id}}</p>
+  <p><strong>Class ID:</strong> {{character.class_id}}</p>
+  <p><strong>Level:</strong> {{character.level}}</p>
+  <p><strong>Hit Points:</strong> {{character.hit_points}}</p>
+  <p><strong>Class Name:</strong> {{character.class.name}}</p>
+  <p><strong>Class Description:</strong> {{character.class.description}}</p>
+  <p><strong>Strength:</strong> {{character.class.strength}}</p>
+  <p><strong>Race:</strong> {{character.race.name}}</p>
+</div> --}}
