--- a/form/style.css
+++ b/form/style.css
@@ -1,66 +1,66 @@
 body {
-    background-color: #1c1c1c;
-    color: #fff;
-    font-family: 'Times New Roman', serif;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+  background-color: #1c1c1c;
+  color: #fff;
+  font-family: "Times New Roman", serif;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-    font-size: 36px;
-    text-transform: uppercase;
+  font-size: 36px;
+  text-transform: uppercase;
 }
 
 #questionForm {
-    max-width: 400px;
-    margin: 0 auto;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 #question {
-    background-color: #333;
-    border: 2px solid #444;
-    border-radius: 5px;
-    padding: 20px;
-    margin: 20px 0;
+  background-color: #333;
+  border: 2px solid #444;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 20px 0;
 }
 
 #answer-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 button {
-    background-color: #D4AF37;
-    color: #1c1c1c;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    margin: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  background-color: #d4af37;
+  color: #1c1c1c;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #FFD700;
+  background-color: #ffd700;
 }
 
 #startquiz {
-    background-color: #008000;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  background-color: #008000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 #startquiz:hover {
-    background-color: #00FF00;
+  background-color: #00ff00;
 }
 
 .hide {
-    display: none
+  display: none;
 }
