--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,10 @@
   --border-radius: 0.3rem;
 }
 
+.hidden {
+  display: none;
+}
+
 body {
   font-family: Arial;
   margin: 0;
@@ -182,10 +186,6 @@ img {
   padding: 10px;
 }
 
-.hidden {
-  display: none;
-}
-
 .post-list {
   padding: 10px;
 }
@@ -210,22 +210,27 @@ img {
 .strong {
   font-weight: bold;
 }
+
 .character-template {
   margin-top: 2em;
 }
+
 .character-template h2 {
   color: white;
   font-family: "Griffy";
 }
+
 .character-info {
   display: flex;
   justify-content: space-evenly;
 }
+
 .character-image {
   float: right;
   width: 49%;
   text-align: center;
 }
+
 .box-outline {
   border-radius: 10px;
   padding: 10px;
@@ -237,11 +242,13 @@ img {
     rgba(0, 0, 0, 1) 95%
   );
 }
+
 .character-stats {
   display: flex;
   margin-top: 15px;
   justify-content: space-around;
 }
+
 .character-abilities {
   display: flex;
   flex-wrap: wrap;
@@ -251,6 +258,7 @@ img {
   justify-content: center;
   gap: 100px 600px;
 }
+
 .update-btn {
   color: white;
   cursor: pointer;
@@ -258,9 +266,68 @@ img {
   transition: color 0.1s;
   border: none;
 }
+
 .update-btn:hover {
   color: var(--secondary);
   background-color: var(--dark);
+}
+
+#question-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+#question {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  border: 2px solid #444;
+  border-radius: 5px;
+  width: 400px;
+  color: white;
+  padding: 20px;
+  margin: 20px 0;
+}
+
+#answer-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+button {
+  background-color: #d4af37;
+  color: #1c1c1c;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #ffd700;
+}
+
+#startquiz {
+  background-color: #008000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#startquiz:hover {
+  background-color: #00ff00;
 }
 
 @media screen and (max-width: 1170px) {
