--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,21 +1,23 @@
-<form id="questionForm">
+<form id="question-form">
   <h1>Character Creator</h1>
   <!-- Question field -->
-  <div id="question"></div>
+  <div id="question" class="hidden"></div>
   <!-- Answer buttons -->
-  <div id="answer-buttons" class="hidden">
-    <button id="answer1" data-class="1">Answer 1</button>
-    <button id="answer2" data-class="2">Answer 2</button>
-    <button id="answer3" data-class="3">Answer 3</button>
-    <button id="answer4" data-class="4">Answer 4</button>
-    <button id="answer5" data-class="5">Answer 5</button>
-    <button id="answer6" data-class="6">Answer 6</button>
-    <button id="answer7" data-class="7">Answer 7</button>
-    <button id="answer8" data-class="8">Answer 8</button>
-    <button id="answer9" data-class="8">Answer 9</button>
+  <div class="answers-section hidden">
+    <div id="answer-buttons">
+      <button id="answer1" data-class="1">Answer 1</button>
+      <button id="answer2" data-class="2">Answer 2</button>
+      <button id="answer3" data-class="3">Answer 3</button>
+      <button id="answer4" data-class="4">Answer 4</button>
+      <button id="answer5" data-class="5">Answer 5</button>
+      <button id="answer6" data-class="6">Answer 6</button>
+      <button id="answer7" data-class="7">Answer 7</button>
+      <button id="answer8" data-class="8">Answer 8</button>
+      <button id="answer9" data-class="9">Answer 9</button>
+    </div>
   </div>
-  <!-- Start quiz button -->
-  <button id="startquiz">Start Quiz</button>
 </form>
+<!-- Start quiz button -->
+<button id="startquiz">Start Quiz</button>
 
 <script src="/js/form.js"></script>
