--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -27,7 +27,7 @@
 </div>
 <script src="/js/character.js"></script>
 
-{{!-- <div id="character-details-template">
+<div id="character-details-template">
   <p><strong>ID:</strong> {{character.id}}</p>
   <p><strong>User ID:</strong> {{character.user_id}}</p>
   <p><strong>Class ID:</strong> {{character.class_id}}</p>
@@ -37,4 +37,4 @@
   <p><strong>Class Description:</strong> {{character.class.description}}</p>
   <p><strong>Strength:</strong> {{character.class.strength}}</p>
   <p><strong>Race:</strong> {{character.race.name}}</p>
-</div> --}}
+</div>
