--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -25,3 +25,16 @@
       Character</button>
   </div>
 </div>
+<script src="/js/character.js"></script>
+
+{{!-- <div id="character-details-template">
+  <p><strong>ID:</strong> {{character.id}}</p>
+  <p><strong>User ID:</strong> {{character.user_id}}</p>
+  <p><strong>Class ID:</strong> {{character.class_id}}</p>
+  <p><strong>Level:</strong> {{character.level}}</p>
+  <p><strong>Hit Points:</strong> {{character.hit_points}}</p>
+  <p><strong>Class Name:</strong> {{character.class.name}}</p>
+  <p><strong>Class Description:</strong> {{character.class.description}}</p>
+  <p><strong>Strength:</strong> {{character.class.strength}}</p>
+  <p><strong>Race:</strong> {{character.race.name}}</p>
+</div> --}}
