added name input and race dropdown

--- a/form/style.css
+++ b/form/style.css
@@ -64,3 +64,20 @@ button:hover {
 .hide {
   display: none;
 }
+
+#name {
+  padding: 5px;
+  border: 2px solid #ffd700;
+  border-radius: 5px;
+}
+
+select {
+  padding: 5px;
+    border: 2px solid #ffd700;
+    border-radius: 5px;
+    font-family: 'MedievalSharp', cursive;
+}
+
+#raceDropdown{
+  padding: 10px;
+}
