--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -13,16 +13,16 @@
       {{character.race.name}}</H2>
   </div>
   <div class="character-stats">
-    <h2 class="fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
+    <h2 class="character-hp fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
     <h3><img src="{{character.class.image}}" /></h3>
   </div>
   <div class="character-abilities">
-    <h2 class="box-outline">Strength: {{character.class.strength}}</h2>
-    <h2 class="box-outline">Intelligence: {{character.class.intelligence}}</h2>
-    <h2 class="box-outline">Dexterity: {{character.class.dexterity}}</h2>
-    <h2 class="box-outline">Wisdom: {{character.class.wisdom}}</h2>
-    <h2 class="box-outline">Constitution: {{character.class.constitution}}</h2>
-    <h2 class="box-outline">Charisma: {{character.class.charisma}}</h2>
+    <h2 id="character-strength" class="box-outline">Strength: {{character.class.strength}}</h2>
+    <h2 id="character-intelligence" class="box-outline">Intelligence: {{character.class.intelligence}}</h2>
+    <h2 id="character-dexterity" class="box-outline">Dexterity: {{character.class.dexterity}}</h2>
+    <h2 id="character-wisdom" class="box-outline">Wisdom: {{character.class.wisdom}}</h2>
+    <h2 id="character-constitution" class="box-outline">Constitution: {{character.class.constitution}}</h2>
+    <h2 id="character-charisma" class="box-outline">Charisma: {{character.class.charisma}}</h2>
     <button class="login-font box-outline update-btn" type="submit">Update
       Character</button>
   </div>
