--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,15 +213,13 @@ img {
 .strong {
   font-weight: bold;
 }
-
 .character-template {
   background-color: #000000;
-  background-image: url("../asset/background-image.png");
+  background-image: url('../asset/background-image.png');
   background-size: cover;
   width: 100%;
   height: 100%;
 }
-
 .character-template h2 {
   color: var(--light);
   font-family: "Griffy";
@@ -233,50 +231,44 @@ img {
   color: var(--secondary);
   background-color: var(--light);
 }
-
 .character-info {
   display: flex;
   justify-content: space-evenly;
 }
-
 .character-image {
   float: right;
   width: 49%;
   text-align: center;
 }
-
 .box-outline {
   border-radius: 10px;
   padding: 10px;
   height: 50px;
-}
 
+}
 .character-stats {
   display: flex;
   margin-top: 15px;
   justify-content: space-around;
 }
-
 .character-abilities {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   width: 35%;
   justify-content: flex-end;
-  gap: 60px 400px;
+  gap: 80px 250px;
   margin-top: -500px;
-  margin-left: 1300px;
+  margin-left: 1000px;
 }
-
 .update-btn {
   color: white;
   cursor: pointer;
   font-size: 100%;
   transition: color 0.1s;
   border: none;
-  background-image: url("../asset/fire.png");
+  background-image: url('../asset/fire.png');
 }
-
 .update-btn:hover {
   color: var(--primary);
   background-color: var(--dark);
