--- a/public/css/style.css
+++ b/public/css/style.css
@@ -215,7 +215,7 @@ img {
 }
 .character-template {
   background-color: #000000;
-  background-image: url('../asset/background-image.png');
+  background-image: url("../asset/background-image.png");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -244,7 +244,6 @@ img {
   border-radius: 10px;
   padding: 10px;
   height: 50px;
-
 }
 .character-stats {
   display: flex;
@@ -267,7 +266,7 @@ img {
   font-size: 100%;
   transition: color 0.1s;
   border: none;
-  background-image: url('../asset/fire.png');
+  background-image: url("../asset/fire.png");
 }
 .update-btn:hover {
   color: var(--primary);
@@ -330,6 +329,28 @@ button:hover {
 
 #startquiz:hover {
   background-color: #00ff00;
+}
+
+.card-anchor {
+  display: flex;
+  flex-direction: column;
+  /* height: 30vh; */
+}
+
+.character-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.character-card-stats {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.character-card-image {
+  height: 50vh;
 }
 
 @media screen and (max-width: 1170px) {
