added style for all character

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,3 +1,4 @@
+<img src="/asset/dragon_art.jpg" class="background" />
 <form id="question-form">
   <h1>Character Creator</h1>
   <!-- Question field -->
