--- a/public/css/style.css
+++ b/public/css/style.css
@@ -215,11 +215,12 @@ img {
   font-weight: bold;
 }
 .character-template {
-  background-color: #000000;
   background-image: url("../asset/background-image.png");
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 .character-template h2 {
   color: var(--light);
@@ -233,6 +234,7 @@ img {
   background-color: var(--light);
 }
 .character-info {
+  padding: 20px;
   display: flex;
   justify-content: space-evenly;
 }
@@ -248,19 +250,29 @@ img {
 }
 .character-stats {
   display: flex;
+  align-items: center;
   margin-top: 15px;
   justify-content: space-around;
 }
-.character-abilities {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 35%;
-  justify-content: flex-end;
-  gap: 80px 250px;
-  margin-top: -500px;
-  margin-left: 1000px;
+
+h2 {
+  padding: 15px;
 }
+.character-abilities {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.character-image-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .update-btn {
   color: white;
   cursor: pointer;
