updated js file

--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -2,6 +2,7 @@
 <div class="character-template">
 
   <div class="strong character-info">
+    {{!-- <input type ="text" placeholder="{{character.character_name}}"> --}}
     <h2
       id="character-name"
       class="box-outline"
