--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -23,7 +23,7 @@
         <input id="dexterity-input" class="box-outline">
       </h2>
     </div>
-    <div class="character-image-section" ><img src="{{character.class.image}}" /> <button class="login-font box-outline update-btn" type="submit">Update
+    <div class="character-image-section" ><img src="{{character.class.image}}" /> <button class="login-font box-outline update-btn" value="submit" type="submit">Update
       Character</button></div>
     <div class="character-abilities">
         <h2 class="character-hp fb box-outline">Hit Points: {{character.class.hit_points}}
