added update syntax

--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -1,6 +1,6 @@
 <!-- Character Template -->
 <div class="character-template">
-  <div class="strong character-info">
+  <div data-id="{{character.id}}" class="strong character-info">
     <h2
       id="character-name"
       class="box-outline"
