--- a/views/character.handlebars
+++ b/views/character.handlebars
@@ -17,8 +17,7 @@
       <h2 class="character-intelligence box-outline">Intelligence: {{character.class.intelligence}}</h2>
       <h2 class="character-dexterity box-outline">Dexterity: {{character.class.dexterity}}</h2>
     </div>
-    <div class="character-image-section" ><img src="{{character.class.image}}" /> <button class="login-font box-outline update-btn" type="submit">Update
-      Character</button></div>
+    <div class="character-image-section" ><img src="{{character.class.image}}" /> </div>
     <div class="character-abilities">
         <h2 class="character-hp fb box-outline">Hit Points: {{character.class.hit_points}}</h2>
       <h2 class="character-wisdom box-outline">Wisdom: {{character.class.wisdom}}</h2>
