--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/api/character/create">Create Character</a>
-      <a href="/api/charactersall">Your Character</a>
+      <a href="/api/charactersall">Your Characters</a>
       {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
       {{else}}
