--- a/public/css/style.css
+++ b/public/css/style.css
@@ -295,10 +295,6 @@ h2 {
 }
 
 #question {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: #333;
   border: 2px solid #444;
   border-radius: 5px;
@@ -306,6 +302,13 @@ h2 {
   color: white;
   padding: 20px;
   margin: 20px 0;
+}
+
+.question-display {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #answer-buttons {
